--- a/app/templates/speech_logs.html
+++ b/app/templates/speech_logs.html
@@ -7,6 +7,7 @@
 
     <div class="speech-logs-content">
         
+        {% if not is_member_view %}
         <form id="speech-logs-filter-form" method="GET" action="{{ url_for('speech_logs_bp.show_speech_logs') }}" class="filters-container">
             <div class="filter-row">
                 <div class="form-group">
@@ -69,6 +70,7 @@
                 {% endif %}
             </div>
         </form>
+        {% endif %}
 
         {% if grouped_logs %}
             {% for level, logs in grouped_logs.items() %}
