feat: Add view mode toggle to speech logs allowing authorized users to switch between member and admin views.

--- a/app/static/css/speech_logs.css
+++ b/app/static/css/speech_logs.css
@@ -4,6 +4,12 @@
     margin: 0 auto;
 }
 
+.view-mode-toggle {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: flex-end;
+}
+
 .section-heading {
     text-align: left;
     margin-top: 30px;
