--- a/app/templates/speech_logs.html
+++ b/app/templates/speech_logs.html
@@ -92,6 +92,7 @@
                     <i class="fas fa-chevron-down caret-icon" id="caret-{{ level }}"></i>
                 </h2>
                 
+                {% if is_member_view %}
                 <div class="level-progress-summary" id="progress-{{ level }}">
                     {% set summary = completion_summary.get(level|string) %}
                     {% if summary %}
@@ -131,6 +132,7 @@
                         {% endif %}
                     {% endif %}
                 </div>
+                {% endif %}
 
                 <div class="logs-container" id="logs-{{ level }}">
                     
