--- a/app/static/css/contacts.css
+++ b/app/static/css/contacts.css
@@ -80,6 +80,49 @@
   color: #000;
 }
 
-.badge-awards i {
-  color: #c05621;
+
+/* Accordion styles */
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+}
+
+.accordion.active,
+.accordion:hover {
+  background-color: #e0e0e0;
+}
+
+.accordion:after {
+  content: '\002B';
+  /* Plus icon */
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.accordion.active:after {
+  content: "\2212";
+  /* Minus icon */
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  border-bottom: 1px solid #ddd;
 }
